# esymath

./: Makefile.in  README.md  config.status  configure  configure.ac  esymath.c  func.c  header.h  low.c  main.c  uper.c
autom4te.cache/: output.0  requests  traces.0
libcalc/: divide.c  factorial.c  libcalc.h  minus.c  multiply.c  plus.c  sqrt.c
libconvert/: convert.c  libconvert.h
