AC_INIT([esymath], [1.0], [denyspavliuk13@gmail.com])
AC_CONFIG_SRCDIR([main.c])

# Checks for programs
AC_PROG_CC

# Checks for libraries
# AC_CHECK_LIB([library], [function])

# Checks for header files
AC_CHECK_HEADERS([stdio.h])

# Checks for typedefs, structures, and compiler characteristics
# AC_C_CONST
# AC_TYPE_SIZE_T

# Checks for library functions
# AC_FUNC_MALLOC

# Output files
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
