AC_INIT([esymath], [1.0], [denyspavliuk13@gmail.com])
AC_CONFIG_SRCDIR([esymath.c])

# Check for gcc compiler
AC_PROG_CC

# Checks for header files
AC_CHECK_HEADERS([stdio.h stdlib.h math.h])

# Checks for typedefs, structures, and compiler characteristics
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions
AC_CHECK_FUNCS([memset])

# Output
AC_OUTPUT(Makefile)
